force-app/main/default/objects/Economy_Import_Event__e/Economy_Import_Event__e.object-meta.xml
<CustomObject>
    <label>Economy Import Event</label>
    <pluralLabel>Economy Import Events</pluralLabel>
</CustomObject>