force-app/main/default/objects/Economy_Import_Event__e/fields/Analysis_Id__c.field-meta.xml
<CustomField>
    <fullName>Analysis_Id__c</fullName>
    <label>Analysis Id</label>
    <type>Text</type>
    <length>18</length>
</CustomField>