force-app/main/default/objects/Economy_Import_Event__e/fields/Diagnostic_Message__c.field-meta.xml
<CustomField>
    <fullName>Diagnostic_Message__c</fullName>
    <label>Diagnostic Message</label>
    <type>Text</type>
    <length>255</length>
</CustomField>