force-app/main/default/objects/Economy_Import_Event__e/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Text</type>
    <length>20</length>
</CustomField>